mixin cleanup